# binary-diffusion-tabular

./: .gitignore  LICENSE  README.md  checkNan.py  command_history.txt  divisionbyZeroError.py  environment.yml  pyproject.toml  requirements.txt  sample.py  sample_evaluate.py  train.py
binary_diffusion_tabular/: __init__.py  binary_diffusion_1d.py  dataset.py  diffusion.py  fixed_size_binary_table_transformation.py  model.py  trainer.py  transformation.py  utils.py
configs/: adult.yaml  cervical.yaml  diabetes.yaml  heloc.yaml  housing.yaml  sick.yaml  travel.yaml
data/: adult_test.csv  adult_train.csv  cervical_test.csv  cervical_train.csv  diabetes_test.csv  heloc_test.csv  heloc_train.csv  housing_test.csv  housing_train.csv  sick_test.csv  sick_train.csv  travel_test.csv  travel_train.csv
federated_binary_diffusion/: data_prep.py  evaluate_synthetic.py  federated_training.py  federated_training_flower.py  federated_training_pysyft.py  federated_training_scratch.py  generate_synthetic_data.py  utils.py
federated_binary_diffusion/configs/: client1_config.yaml  client2_config.yaml
federated_binary_diffusion/data/: client1_data.csv  client2_data.csv
federated_binary_diffusion/models/client1/: transformation.joblib
federated_binary_diffusion/models/client2/: transformation.joblib
federated_binary_diffusion/models/global/: global.py
tests/: test_fixed_size_binary_table_transformation.py  test_model.py
