[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-diffusion-tabular"
version = "0.1.0"
description = "Binary diffusion for tabular data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vitaliy Kinakh", email = "kinakh.vitalii@gmail.com"}
]
dependencies = [
    "accelerate==1.1.1",
    "ema-pytorch==0.7.6",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
    "scikit-learn==1.5.2",
    "torch==2.5.0",
    "torchmetrics==1.6.0",
    "tqdm==4.67.1",
    "wandb==0.19.0"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["binary_diffusion_tabular"]

[project.urls]
Homepage = "https://github.com/vkinakh/binary-diffusion-tabular"